moviendo todos los logos a representaciones y aumentando tamaño

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -132,15 +132,15 @@ body
 							img(src="./public/svg/logoEdicas.svg", alt="Edicas", class="logo-edicas")
 						a(href="http://190.107.176.73/~prodinwe/www/")
 							img(src="./public/svg/logoInsuban.svg", alt="Insuban", class="logo-insuban")
-				div(class="Maquinaria-fondo")
-					p(class="Maquinaria-fondo_titulo") MAQUINARIA
-					div(class="Maquinaria-fondo_logos")
 						a(href="http://www.grasselli.com/es")
-							img(src="./public/svg/logoGrasselliBlanco.svg", alt="Grasselli", class="logo-grasselli")
+							img(src="./public/svg/logoGrasselli.svg", alt="Grasselli", class="logo-grasselli")
 						a(href="http://www.medocsa.com/")
 							img(src="./public/images/logoMedoc.jpg", alt="Medoc", class="logo-medoc")
 						a(href="http://www.braher.com/")
 							img(src="./public/images/logoBraher.png", alt="Braher", class="logo-braher")
+				div(class="Maquinaria-fondo")
+				//	p(class="Maquinaria-fondo_titulo") MAQUINARIA
+	
 			// FOOTER
 		div(class="Footer")
 			div(class="Footer-layout")
