--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -251,38 +251,22 @@ a
 		&-representaciones_logos
 			display flex
 			justify-content space-between
+			flex-wrap wrap
+			height 270px
+			margin 1rem
 		
 		.logo-visko
-			width 80px
+			width 100px
 			
 		.logo-valfilm
-			width 100px
+			width 150px
 		
 		.logo-edicas
-			width 83px
+			width 130px
 		
 		.logo-insuban
-			width 100px					
+			width 180px
 
-		&-fondo
-			background-image url('../images/maquinaria.png')
-			width 50%
-			
-		&-fondo_titulo
-			color white
-			font-size 2rem
-			margin-right 4rem
-			text-align right
-		
-		&-fondo_logos
-			display flex
-			flex-direction column
-			align-items center
-			justify-content space-between
-			width 240px
-			height 260px
-			margin-left 14rem
-			
 		.logo-grasselli	
 			width 220px
 						
@@ -290,7 +274,19 @@ a
 			width 220px
 		
 		.logo-braher
-			width 220px	
+			width 220px
+			
+		&-fondo
+			background-image url('../images/maquinaria.png')
+			margin-left 1rem
+			width 50%
+			
+		&-fondo_titulo
+			color white
+			font-size 2rem
+			margin-right 4rem
+			text-align right
+			
 	
 	.Footer
 		display flex
