Eliminamos una imagen y la cambiamos por una de viskoteepak

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -35,7 +35,7 @@ body
 					each item in ["CARNES PROCESADAS", "CARNES FRESCAS", "AVES", "QUESOS Y LACTEOS", "PESCADOS Y MARISCOS", "FRUTAS Y VEGETALES", "LIQUIDOS", "HO.RE.CA"]
 						li= item					
 			div(class="Sectores-gallery")
-				img(src="./public/images/carneProcesada.jpg", alt="Carne Procesada", class="Sectores-gallery_img")
+				img(src="./public/images/jamon.jpg", alt="Carne Procesada", class="Sectores-gallery_img")
 
 		// SERVICIOS
 
@@ -168,3 +168,5 @@ body
 				p Epcys y Nova Meats forman parte del 
 					a(href='http://gruponm.com/', class="linkGNM") Grupo NM | 
 					|Todos los derechos reservados © 2015
+script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js')
+script(src='./public/js/vendor/responsiveslides.min.js')
