--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -123,6 +123,8 @@ a
 			margin-left 3rem	
 		
 		&-gallery
+			display flex
+			align-items center
 			margin-right 2rem
 			overflow hidden
 			width 600px
@@ -130,6 +132,7 @@ a
 		
 		&-gallery_img
 			width 600px
+			
 
 	.Servicios
 		display flex
