--- a/lib/index.jade
+++ b/lib/index.jade
@@ -7,18 +7,29 @@ head
 body
 	div(class="Layout")
 		div(class="Header")
-			div(class="Header-nav")
-				img(class="Header-nav_logo" src="./public/images/logognm.png", alt="")
-				ul(class="Header-nav_list")
-					l1(class="Header-nav_items") SECTORES QUE SERVIMOS
-					img(src="./public/images/separadores2.png", alt="")
-					l1(class="Header-nav_items") NUESTROS SERVICIOS
-					img(src="./public/images/separadores2.png", alt="")
-					l1(class="Header-nav_items") SOLUCIONES DE EMBASADO
-					img(src="./public/images/separadores2.png", alt="")
-					l1(class="Header-nav_items") MAQUINARIA
-					img(src="./public/images/separadores2.png", alt="")
-					l1(class="Header-nav_items") REPRESENTACIONES	
+			div(class="container")
+				div(class="Header-nav")
+					img(class="Header-nav_logo" src="./public/images/logognm.png", alt="")
+					ul(class="Header-nav_list")
+						l1(class="Header-nav_items") SECTORES QUE SERVIMOS
+						img(src="./public/images/separadores2.png", alt="")
+						l1(class="Header-nav_items") NUESTROS SERVICIOS
+						img(src="./public/images/separadores2.png", alt="")
+						l1(class="Header-nav_items") SOLUCIONES DE EMBASADO
+						img(src="./public/images/separadores2.png", alt="")
+						l1(class="Header-nav_items") MAQUINARIA
+						img(src="./public/images/separadores2.png", alt="")
+						l1(class="Header-nav_items") REPRESENTACIONES	
+			div(class="Header-slides")
+				ul(class="rslides")
+					li
+						img(src="./public/images/slides/01.jpg", alt="Salami" title="Salami")
+					li
+						img(src="./public/images/slides/02.jpg")
+					li
+						img(src="./public/images/slides/03.jpg")
+					li
+						img(src="./public/images/slides/04.jpg")
 			div(class="Header-empresas")
 				h3(class="h3-Empresas") Nuestras Empresas
 				div(class="Header-empresas_logos")
@@ -26,7 +37,6 @@ body
 						img(src="./public/svg/logoEpcys.svg", alt="", class="Header-empresas_Epcys")
 					a(href="http://novameats.com.ec/")
 						img(src="./public/svg/logoNova.svg", alt="", class="Header-empresas_Nova")
-
 		// SECTORES
 
 		div(class="Sectores")
@@ -168,5 +178,7 @@ body
 				p Epcys y Nova Meats forman parte del 
 					a(href='http://gruponm.com/', class="linkGNM") Grupo NM | 
 					|Todos los derechos reservados © 2015
-script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js')
-script(src='./public/js/vendor/responsiveslides.min.js')
+			// Script		
+	script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
+	script(src='./public/js/vendor/responsiveslides.min.js')
+	script(src='./public/js/slides.js')
