--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -13,6 +13,7 @@ subtitulos()
 
 @import url(https://fonts.googleapis.com/css?family=Exo:400,800,200);
 @import "nib"
+@import "slides.styl"
 	
 body
 	background #807C7C
@@ -40,22 +41,26 @@ a
 		display flex
 		justify-content center
 		flex-wrap wrap
-		background-image url('../images/slide.jpg')
 		width 100%
-		height 480px
+		height auto
+		
+		&-slides
+			background black
+			width 100%
+			z-index 1
 		
 		.Header-nav 
 			display flex
 			justify-content space-between
 			align-items center
 			color white
-			width 1100px
+			width 1363px
 			height 140px
 			
 		&-nav_logo
 			width 111px
 			height 107px
-			margin 0 1rem 0 0
+			margin 0 1rem 0 .5rem
 			
 		&-nav_list
 			display flex
@@ -96,8 +101,12 @@ a
 		&-empresas_Nova
 			width 112px
 			height 40px		
-			
-
+	
+	.container
+		position absolute
+		width 100%
+		z-index 2	
+	
 	.Sectores
 		background black
 		display flex
