Eliminamos imagenes innecesarias y añadimos representaciones Fatosa y Fribran

--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -264,28 +264,34 @@ a
 			justify-content space-between
 			flex-wrap wrap
 			height 270px
-			margin 1rem
+			margin 0 1rem 0 0
+		
+		&-representaciones_logos a
+			margin .8rem 0	
 		
 		.logo-visko
-			width 100px
+			width 120px
 			
 		.logo-valfilm
 			width 150px
 		
 		.logo-edicas
-			width 130px
+			width 120px
 		
 		.logo-insuban
-			width 180px
+			width 130px
 
 		.logo-grasselli	
-			width 220px
+			width 130px
 						
 		.logo-medoc
-			width 220px
+			width 120px
 		
 		.logo-braher
-			width 220px
+			width 120px
+		
+		.logo-fibran
+			width 100px	
 			
 		&-fondo
 			background-image url('../images/maquinaria.png')
