--- a/lib/index.jade
+++ b/lib/index.jade
@@ -138,16 +138,20 @@ body
 							img(src="./public/svg/logoVisko.svg", alt="Viskoteepak", class="logo-visko")
 						a(href="http://www.valfilm.com.br/?language=es")
 							img(src="./public/svg/logoValfilm.svg", alt="Valfilm", class="logo-valfilm")
-						a(href="http://www.edicas.es/Inici")
-							img(src="./public/svg/logoEdicas.svg", alt="Edicas", class="logo-edicas")
+						a(href="http://grupofibran.com/fibran/home.php")
+							img(src="./public/images/logoFibran.jpg", alt="Fibran", class="logo-fibran")
 						a(href="http://190.107.176.73/~prodinwe/www/")
 							img(src="./public/svg/logoInsuban.svg", alt="Insuban", class="logo-insuban")
+						a(href="http://www.braher.com/")
+							img(src="./public/images/logoBraher.png", alt="Braher", class="logo-braher")
 						a(href="http://www.grasselli.com/es")
 							img(src="./public/svg/logoGrasselli.svg", alt="Grasselli", class="logo-grasselli")
 						a(href="http://www.medocsa.com/")
 							img(src="./public/images/logoMedoc.jpg", alt="Medoc", class="logo-medoc")
-						a(href="http://www.braher.com/")
-							img(src="./public/images/logoBraher.png", alt="Braher", class="logo-braher")
+						a(href="http://www.edicas.es/Inici")
+							img(src="./public/svg/logoEdicas.svg", alt="Edicas", class="logo-edicas")
+						a(href="http://fatosa.com/")
+							img(src="./public/images/logoFatosa.jpg", alt="Fatosa", class="logo-braher")
 				div(class="Maquinaria-fondo")
 				//	p(class="Maquinaria-fondo_titulo") MAQUINARIA
 	
