cambiamos las imagenes de la Gallería y reacomodamos los logos de las representaciones

--- a/Slicebox/template.jade
+++ b/Slicebox/template.jade
@@ -12,38 +12,43 @@
   .wrapper
     ul#sb-slider.sb-slider
       li
-        a(href='http://www.flickr.com/photos/strupler/2969141180', target='_blank')
-          img(src='./public/images/1.jpg', alt='image1')
+        a(href='#', target='_blank')
+          img(src='./public/images/gallery/cProcesada.jpg', alt='Carne Procesada')
         .sb-description
-          h3 Creative Lifesaver
+          h3 Carne Procesada
       li
-        a(href='http://www.flickr.com/photos/strupler/2968268187', target='_blank')
-          img(src='./public/images/2.jpg', alt='image2')
+        a(href='#', target='_blank')
+          img(src='./public/images/gallery/cFrescas.jpg', alt='Carnes Frescas')
         .sb-description
-          h3 Honest Entertainer
+          h3 Carnes Frescas
       li
-        a(href='http://www.flickr.com/photos/strupler/2968114825', target='_blank')
-          img(src='./public/images/3.jpg', alt='image1')
+        a(href='#', target='_blank')
+          img(src='./public/images/gallery/aves.jpeg', alt='Aves')
         .sb-description
-          h3 Brave Astronaut
+          h3 Aves
       li
-        a(href='http://www.flickr.com/photos/strupler/2968122059', target='_blank')
-          img(src='./public/images/4.jpg', alt='image1')
+        a(href='#', target='_blank')
+          img(src='./public/images/gallery/quesosL.jpeg', alt='Quesos y Lácteos')
         .sb-description
-          h3 Affectionate Decision Maker
+          h3 Quesos y Lácteos
       li
-        a(href='http://www.flickr.com/photos/strupler/2969119944', target='_blank')
-          img(src='./public/images/5.jpg', alt='image1')
+        a(href='#', target='_blank')
+          img(src='./public/images/gallery/pescados.jpeg', alt='Pescados y Mariscos')
         .sb-description
-          h3 Faithful Investor
+          h3 Pescados y Mariscos
       li
-        a(href='http://www.flickr.com/photos/strupler/2968126177', target='_blank')
-          img(src='./public/images/6.jpg', alt='image1')
+        a(href='#', target='_blank')
+          img(src='./public/images/gallery/frutas.jpeg', alt='Frutas y Vegetales')
         .sb-description
-          h3 Groundbreaking Artist
+          h3 Frutas y Vegetales
       li
-        a(href='http://www.flickr.com/photos/strupler/2968945158', target='_blank')
-          img(src='./public/images/7.jpg', alt='image1')
+        a(href='#', target='_blank')
+          img(src='./public/images/gallery/liquidos.jpeg', alt='Líquidos')
         .sb-description
-          h3 Selfless Philantropist
+          h3 Líquidos
+       li
+         a(href='#', target='_blank')
+           img(src='./public/images/gallery/horeca.jpg', alt='HO.RE.CA.')
+         .sb-description
+           h3 HO.RE.CA.
     #shadow.shadow
