--- a/public/css/demo.css
+++ b/public/css/demo.css
@@ -1,4 +1,4 @@
-*,
+/**,
 *:after,
 *:before {
 	-webkit-box-sizing: border-box;
@@ -6,7 +6,7 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-}
+}*/
 
 /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
 .clearfix:after {
@@ -32,7 +32,7 @@ a {
 	text-decoration: none;
 }
 
-h1, h2, h5 {
+/*h1, h2, h5 {
 	margin: 20px 20px 30px 20px;
 	font-size: 56px;
 	color: #fff;
@@ -40,16 +40,16 @@ h1, h2, h5 {
 	text-align: center;
 	font-weight: 700;
 	text-shadow: 1px 1px 3px #e0d1bc;
-}
+}*/
 
-h1 span, h5 {
+/*h1 span, h5 {
 	font-size: 18px;
 	display: block;
 	font-style: italic;
 	color: #997f5a;
 	font-weight: 400;
 	text-shadow: 0px 1px 1px #fff;
-}
+}*/
 
 .containerGal {
 	display: flex;
