Eliminamos archivos innecesarios

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -188,4 +188,4 @@ body
 	script(src='./public/js/vendor/responsiveslides.min.js')
 	script(src='./public/js/slides.js')
 	script(type='text/javascript', src='./public/js/vendor/jquery.slicebox.js')
-	script(src='../DESARROLLO2/public/js/gallery.js')
+	script(src='./public/js/gallery.js')
