--- a/Slicebox/template.jade
+++ b/Slicebox/template.jade
@@ -23,27 +23,27 @@
           h3 Carnes Frescas
       li
         a(href='#', target='_blank')
-          img(src='./public/images/gallery/aves.jpeg', alt='Aves')
+          img(src='./public/images/gallery/aves.jpg', alt='Aves')
         .sb-description
           h3 Aves
       li
         a(href='#', target='_blank')
-          img(src='./public/images/gallery/quesosL.jpeg', alt='Quesos y Lácteos')
+          img(src='./public/images/gallery/quesosL.jpg', alt='Quesos y Lácteos')
         .sb-description
           h3 Quesos y Lácteos
       li
         a(href='#', target='_blank')
-          img(src='./public/images/gallery/pescados.jpeg', alt='Pescados y Mariscos')
+          img(src='./public/images/gallery/pescado2.jpg', alt='Pescados y Mariscos')
         .sb-description
           h3 Pescados y Mariscos
       li
         a(href='#', target='_blank')
-          img(src='./public/images/gallery/frutas.jpeg', alt='Frutas y Vegetales')
+          img(src='./public/images/gallery/frutas.jpg', alt='Frutas y Vegetales')
         .sb-description
           h3 Frutas y Vegetales
       li
         a(href='#', target='_blank')
-          img(src='./public/images/gallery/liquidos.jpeg', alt='Líquidos')
+          img(src='./public/images/gallery/liquidos.jpg', alt='Líquidos')
         .sb-description
           h3 Líquidos
        li
