--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -14,10 +14,11 @@ subtitulos()
 @import url(https://fonts.googleapis.com/css?family=Exo:400,800,200);
 @import "nib"
 @import "slides.styl"
+@import"./embasado/styles.styl"
 
 	
 body
-	background #807C7C
+	/*background #807C7C*/
 	margin 0
 	padding 0
 	font-family 'Exo' sans-serif
@@ -71,7 +72,6 @@ a
 			padding 0
 			width 850px
 			height 50px
-			display none
 			
 		&-nav_items
 			font-size .8rem
