enlazamos el home con embasados

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -21,7 +21,8 @@ body
 						img(src="./public/images/separadores2.png", alt="")
 						l1(class="Header-nav_items") NUESTROS SERVICIOS
 						img(src="./public/images/separadores2.png", alt="")
-						l1(class="Header-nav_items") SOLUCIONES DE EMBASADO
+						l1(class="Header-nav_items")
+							a(href="embasado.html") SOLUCIONES DE EMBASADO
 						img(src="./public/images/separadores2.png", alt="")
 						l1(class="Header-nav_items") MAQUINARIA
 						img(src="./public/images/separadores2.png", alt="")
