Agregamos bootstrap y arreglamos el main menu

--- a/lib/embasado.jade
+++ b/lib/embasado.jade
@@ -9,6 +9,7 @@ head
 	link(rel='stylesheet', type='text/css', href='./public/css/custom.css')
 	script(type='text/javascript', src='./public/js/vendor/modernizr.custom.46884.js')
 	link(rel="stylesheet", href="./public/css/styles.css")
+	link(rel="stylesheet", href="./public/bootstrap/css/bootstrap.min.css")
 
 body
 	div(class="Total")
@@ -27,24 +28,24 @@ body
 				l1(class="menu_items") REPRESENTACIONES
 				// ENCABEZADO
 		div(class="Encabezado")
-			h2 SOLUCIONES DE <br>EMBASADO
+			h2 SOLUCIONES DE<br>EMBASADO
 		div(class="Embasado")
 			div(class="Embasado-list")
 				ul
 					li
-						a(class="Embasado-list_link") BOLSAS TERMOENCOGIBLES ( PVDC ) 56 MICRONES
+						a(class="Embasado-list_link") BOLSAS TERMOENCOGIBLES (PVDC) 56 MICRONES
 					li
-						a(class="Embasado-list_link") BOLSAS TERMOENCOGIBLES ( PVDC ) 76 MICRONES
+						a(class="Embasado-list_link") BOLSAS TERMOENCOGIBLES (PVDC) 76 MICRONES
 					li
-						a(class="Embasado-list_link") BOLSAS NYLON POLY ( TRES SELLOS )
+						a(class="Embasado-list_link") BOLSAS NYLON POLY (TRES SELLOS)
 					li
 						a(class="Embasado-list_link") PELICULA EVOH 
 					li
-						a(class="Embasado-list_link") TRIPA CELULOSA  ( SALCHICHAS ) WIENIEPAK
+						a(class="Embasado-list_link") TRIPA CELULOSA  (SALCHICHAS) WIENIEPAK
 					li
-						a(class="Embasado-list_link") TRIPA FIBROSA ( SALAMES )
+						a(class="Embasado-list_link") TRIPA FIBROSA (SALAMES)
 					li
-						a(class="Embasado-list_link") TRIPA POLYAMIDA ( JAMONES Y MORTADELAS ) NOVA
+						a(class="Embasado-list_link") TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA
 					li
 						a(class="Embasado-list_link") TRIPA NATURAL DE CERDO
 					li
@@ -52,7 +53,7 @@ body
 					li
 						a(class="Embasado-list_link") TRIPA COLAGENO COMESTIBLE									
 			div(class="Embasado-info")
-				h1 TRIPA POLYAMIDA ( JAMONES Y MORTADELAS ) NOVA
+				h1 TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA
 				ul
 					each items in ["CALIBRES DESDE 51 - 305 ANCHO PLANO","CALIBRES DESDE 34 - 205 DRE","VARIOS COLORES","DRE DIAMETRO RECOMENDADO EMBUTIDO"]
 						li= items
@@ -61,6 +62,7 @@ body
 			h2 MAQUINARIA
 			div(class="Maquinaria-list")
 			div(class="Maquinaria-gallery")
+				img(class="Maquinaria-gallery_items" id="" src="./public/images/maquinaria/c35.png")
 
 			// FOOTER
 		div(class="Footer")
