--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -23,7 +23,7 @@ body
 		
 	.Main-menu
 		display flex
-		justify-content center
+		justify-content space-between
 		align-items center
 		width 100%
 		height 90px
@@ -38,7 +38,7 @@ body
 			display flex
 			justify-content space-around
 			align-items center
-			margin 0 0 0 9rem
+			margin 0 1rem 0 2rem
 			padding 0
 			height 50px
 			test(yellow)
@@ -52,7 +52,7 @@ body
 		color white
 		display flex
 		justify-content flex-end
-		width 68%
+		width 58%
 		test(yellow)
 		
 	.Encabezado h2	
@@ -97,7 +97,7 @@ body
 		display flex
 		justify-content center
 		flex-wrap wrap
-		height auto
+		height 500px
 		width 100%
 		test blue
 		
@@ -111,15 +111,24 @@ body
 			test(pink)
 			
 		&-gallery
+			display flex
+			justify-content center
 			background-image url('../images/recuadroGal.png')	
-			background-size cover
-			width 570px
+			background-size contain
+			background-repeat no-repeat
+			width 58%
 			test(brown)
+			
+		&-gallery_items
+			width 222px
+			height 80%
+			background-size contain	
 			
 	.Maquinaria h2
 		color #137CB9
 		width 100%
 		height 50px
+		margin 1.5rem 0 0 0
 		text-align center
 		test(green)
 		
@@ -135,7 +144,7 @@ body
 			display flex
 			justify-content center
 			justify-content space-between
-			width 1024px
+			width 95%
 			height 250px
 		
 		&-titulos, &-texto
