--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -38,13 +38,13 @@ body
 			display flex
 			justify-content space-around
 			align-items center
-			margin 0 1rem 0 2rem
+			margin 0 2rem 0 2rem
 			padding 0
 			height 50px
 			test(yellow)
 		
 	.menu_items
-		font-size .8rem
+		font-size 1.4rem !important
 		height auto	
 		margin 0
 	
