--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,12 @@ body {
   -webkit-align-items: center;
   align-items: center;
   width: 100%;
-  height: 90px;
+  height: 110px;
   border: solid 1px #ffc0cb;
 }
 .Total .Main-menu_logoB {
-  margin-left: 2rem;
-  width: 70px;
+  margin-left: 3.5rem;
+  width: 100px;
   border: solid 1px #f00;
 }
 .Total .Main-menu_list {
@@ -102,6 +102,7 @@ body {
 }
 .Total .menu_items {
   font-size: 1.4rem !important;
+  color: #fff;
   height: auto;
   margin: 0;
 }
@@ -120,11 +121,12 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
   width: 58%;
+  height: 65px;
   border: solid 1px #ff0;
 }
 .Total .Encabezado h2 {
-  font-size: 2rem;
-  line-height: 1.8rem;
+  font-size: 3rem;
+  line-height: 2.5rem;
   margin: 0 0 0.5rem 0;
 }
 .Total .Embasado {
@@ -149,7 +151,7 @@ body {
   border: solid 3px #0ff;
   font-size: 0.9rem;
   height: 340px;
-  line-height: 2rem;
+  line-height: 3rem;
   width: 38%;
 }
 .Total .Embasado-list ul {
@@ -164,11 +166,12 @@ body {
   border: solid 1px #cd853f;
 }
 .Total .Embasado-info h1 {
-  font-size: 1.2rem;
+  font-size: 2rem;
   margin-bottom: 0;
 }
 .Total .Embasado-info li {
   color: #000;
+  padding-left: 2rem;
 }
 .Total .Maquinaria {
   display: -webkit-box;
@@ -289,6 +292,7 @@ body {
 }
 .Total .Footer-texto {
   font-size: 0.6rem;
+  padding-left: 0.5rem !important;
 }
 .Total .Footer-layout_col {
   width: 250px;
@@ -316,6 +320,7 @@ body {
 }
 li {
   list-style: none;
+  font-size: 1rem;
 }
 a {
   text-decoration: none;
