--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -26,12 +26,12 @@ body
 		justify-content space-between
 		align-items center
 		width 100%
-		height 90px
+		height 110px
 		test(pink)
 		
 		&_logoB
-			margin-left 2rem
-			width 70px
+			margin-left 3.5rem
+			width 100px
 			test(red)
 		
 		&_list
@@ -45,6 +45,7 @@ body
 		
 	.menu_items
 		font-size 1.4rem !important
+		color white
 		height auto	
 		margin 0
 	
@@ -53,11 +54,12 @@ body
 		display flex
 		justify-content flex-end
 		width 58%
+		height 65px
 		test(yellow)
 		
 	.Encabezado h2	
-		font-size 2rem
-		line-height 1.8rem
+		font-size 3rem
+		line-height 2.5rem
 		margin: 0 0 .5rem 0
 			
 	.Embasado
@@ -72,7 +74,7 @@ body
 			border solid 3px #00FFFF
 			font-size .9rem
 			height 340px
-			line-height 2rem
+			line-height 3rem
 			width 38%
 			
 		&-list ul
@@ -87,11 +89,12 @@ body
 			test(peru)
 			
 		&-info h1	
-			font-size 1.2rem
+			font-size 2rem
 			margin-bottom 0
 
 		&-info li
 			color black
+			padding-left 2rem
 			
 	.Maquinaria
 		display flex
@@ -152,6 +155,7 @@ body
 				
 		&-texto
 			font-size .6rem
+			padding-left .5rem !important
 
 		&-layout_col
 			width 250px	
