--- a/lib/embasado.jade
+++ b/lib/embasado.jade
@@ -32,31 +32,34 @@ body
 			div(class="Embasado-list")
 				ul
 					li
-						a(class="Embasado-list_link") BOLSAS TERMOENCOGIBLES (PVDC) 56 MICRONES
+						button(id="idtitulos" class="Embasado-list_button") BOLSAS TERMOENCOGIBLES (PVDC) 56 MICRONES
 					li
-						a(class="Embasado-list_link") BOLSAS TERMOENCOGIBLES (PVDC) 76 MICRONES
+						button(id="termo76" class="Embasado-list_button") BOLSAS TERMOENCOGIBLES (PVDC) 76 MICRONES
 					li
-						a(class="Embasado-list_link") BOLSAS NYLON POLY (TRES SELLOS)
+						button(id="nylon" class="Embasado-list_button") BOLSAS NYLON POLY (TRES SELLOS)
 					li
-						a(class="Embasado-list_link") PELICULA EVOH 
+						button(id="evoh" class="Embasado-list_button") PELICULA EVOH 
 					li
-						a(class="Embasado-list_link") TRIPA CELULOSA  (SALCHICHAS) WIENIEPAK
+						button(id="celulosa" class="Embasado-list_button") TRIPA CELULOSA  (SALCHICHAS) WIENIEPAK
 					li
-						a(class="Embasado-list_link") TRIPA FIBROSA (SALAMES)
+						button(id="salames" class="Embasado-list_button") TRIPA FIBROSA (SALAMES)
 					li
-						a(class="Embasado-list_link") TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA
+						button(id="polyamida" class="Embasado-list_button") TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA
+					li(class="liopciones")
+						p(class="Embasado-list_button") TRIPA NATURAL DE CERDO
+						ul
+							li(id="cerdo1" class="Embasado-list_button") MADEJAS DE 10, 15 Y 22 PUNTAS
+							li(id="cerdo2" class="Embasado-list_button") TUBING  DE  7, 10, 12 PUNTAS
+					li(class="liopciones")
+						p(class="Embasado-list_button") TRIPA NATURAL DE CORDERO
+						ul
+							li(id="cordero" class="Embasado-list_button") MADEJAS
 					li
-						a(class="Embasado-list_link") TRIPA NATURAL DE CERDO
-					li
-						a(class="Embasado-list_link") TRIPA NATURAL DE CORDERO
-					li
-						a(class="Embasado-list_link") TRIPA COLAGENO COMESTIBLE									
+						button(id="colageno" class="Embasado-list_button") TRIPA COLAGENO COMESTIBLE									
 			div(class="Embasado-info")
-				h1 TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA
-				ul
-					each items in ["CALIBRES DESDE 51 - 305 ANCHO PLANO","CALIBRES DESDE 34 - 205 DRE","VARIOS COLORES","DRE DIAMETRO RECOMENDADO EMBUTIDO"]
-						li= items
-
+				h1(id="titulazo") TRIPA POLYAMIDA (JAMONES Y MORTADELAS) NOVA
+				p(id="variantes") Datos de prueba
+						
 		div(class="Maquinaria")
 			h2 MAQUINARIA
 			div(class="Maquinaria-list panel-group" id="accordion" role="tablist" aria-multiselectable="true")
@@ -189,3 +192,4 @@ body
 			// Script		
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js')
 	script(src='./public/bootstrap/js/bootstrap.min.js')
+	script(src='./public/js/datos.js')
