--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -11,7 +11,7 @@ subtitulos()
 	font-size 1.1rem
 	text-align center	
 
-@import url(https://fonts.googleapis.com/css?family=Exo:400,800,200);
+@import url(https://fonts.googleapis.com/css?family=Exo:400,800,200)
 @import "nib"
 @import "slides.styl"
 @import"./embasado/styles.styl"
