arreglado margenes y tamaño de gallery maquinaria

--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -131,6 +131,7 @@ body
 			font-size .9rem
 			height 340px
 			line-height 2rem
+			margin-left 3rem
 			width 38%
 			
 		&-gallery
@@ -139,7 +140,7 @@ body
 			background-image url('../images/recuadroGal.png')	
 			background-size contain
 			background-repeat no-repeat
-			width 58%
+			width 550px
 			
 		&-gallery_items
 			width 222px
