fondo ampliado y depuracion de styles embasado

--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -60,12 +60,10 @@ body
 			
 	.Embasado
 		display flex
-		/*justify-content space-around*/
-		height auto
+		height 450px
 		width 100%
 		
 		&-list
-			/*border solid 3px #00FFFF*/
 			font-size .9rem
 			height 340px
 			margin-left 4rem
@@ -74,24 +72,21 @@ body
 			width 30%
 			
 		&-list ul
-			padding 0 1rem
+			padding 0 1rem	
 						
 		&-list_button
 			border-radius 1rem
 		&-list_button:hover
 			color #00FFFF
 		
-		/*&-list_sub
-			margin-left 2rem
-			color white	*/
 		.liopciones
 			background rgba(220,217,217,0.83)
 			border solid 1px gray
 			border-radius 1rem
 			padding 1rem
 			
-		&-list_embase
-			margin-left 3rem	
+		.liopciones li
+			padding-left 2rem			
 
 		&-list p
 			font-size 1.3rem
@@ -109,10 +104,6 @@ body
 		&-info h1	
 			font-size 2rem
 			margin-bottom 0
-
-		&-info li
-			color black
-			padding-left 2rem
 			
 		#titulazo
 			color #00FFFF
