cambio de tamaño en pagina de embasados y mejor alinemamiento

--- a/lib/embasado.jade
+++ b/lib/embasado.jade
@@ -13,7 +13,8 @@ head
 body
 	div(class="Total")
 		div(class="Main-menu")
-			img(class="Main-menu_logoB" src="./public/svg/logoGNM.svg", alt="")
+			a(href="index.html")
+				img(class="Main-menu_logoB" src="./public/svg/logoGNM.svg", alt="")
 			ul(class="Main-menu_list")
 				l1(class="menu_items") SECTORES QUE SERVIMOS
 				img(src="./public/images/separadores2.png", alt="")
