--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -18,7 +18,7 @@ body
 .Total
 	background-image url('../images/fondoInterna.jpg')
 	background-repeat no-repeat
-	width 1020px
+	width 1366px
 		
 	.Main-menu
 		display flex
@@ -66,7 +66,7 @@ body
 		&-list
 			font-size .9rem
 			height 340px
-			margin-left 4rem
+			margin-left 8rem
 			padding 1rem
 			line-height 2rem
 			width 30%
@@ -76,6 +76,7 @@ body
 						
 		&-list_button
 			border-radius 1rem
+			font-size 1.3rem
 		&-list_button:hover
 			color #00FFFF
 		
@@ -112,8 +113,9 @@ body
 	.Maquinaria
 		display flex
 		justify-content center
+		justify-content space-around
 		flex-wrap wrap
-		height 500px
+		height 600px
 		width 100%
 		
 		&-list
@@ -122,8 +124,6 @@ body
 			font-size .9rem
 			height 340px
 			line-height 2rem
-			margin-left 3rem
-			width 38%
 			
 		&-gallery
 			display flex
@@ -131,11 +131,11 @@ body
 			background-image url('../images/recuadroGal.png')	
 			background-size contain
 			background-repeat no-repeat
-			width 550px
+			width 650px
 			
 		&-gallery_items
 			width 222px
-			height 80%
+			height 343px
 			background-size contain	
 			
 	.Maquinaria h2
