Footer texto arreglado

--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -266,6 +266,7 @@ a
 			display flex
 			justify-content center
 			justify-content space-between
+			padding-top 1.5rem
 			width 95%
 			height 250px
 		
@@ -273,8 +274,8 @@ a
 			color white
 				
 		&-texto
-			font-size .7rem !important
-			line-height 1rem
+			font-size 1rem !important
+			line-height 2rem
 
 		&-layout_col
 			width 250px	
