--- a/lib/embasado/styles.styl
+++ b/lib/embasado/styles.styl
@@ -157,6 +157,7 @@ body
 			display flex
 			justify-content center
 			justify-content space-between
+			padding-top 1.5rem
 			width 95%
 			height 250px
 		
@@ -164,7 +165,8 @@ body
 			color white
 				
 		&-texto
-			font-size .6rem
+			font-size 1rem
+			line-height 2rem
 			padding-left .5rem !important
 
 		&-layout_col
