footer home arreglado

--- a/lib/styles.styl
+++ b/lib/styles.styl
@@ -274,8 +274,9 @@ a
 			color white
 				
 		&-texto
-			font-size 1rem !important
-			line-height 2rem
+			font-size .7rem
+			line-height 1rem
+			padding-left .5rem !important
 
 		&-layout_col
 			width 250px	
@@ -287,4 +288,4 @@ a
 			color white
 		
 		.linkGNM
-			color white	
+			color white
